<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MoveActivity">

    <ImageView
        android:id="@+id/bunga1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/bunga1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_paket_1"
        android:layout_below="@+id/bunga1"
        android:text="@string/paket1"
        android:textAlignment="center"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_below="@+id/tv_paket_1"
        android:text="@string/detail_florist"
        android:id="@+id/btn_detail_florist1"
        />

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/bunga2"
        android:id="@+id/bunga2"
        android:layout_below="@+id/btn_detail_florist1"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_paket_2"
        android:layout_below="@+id/bunga2"
        android:text="@string/paket2"
        android:textAlignment="center"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_below="@+id/tv_paket_2"
        android:text="@string/detail_florist"
        android:id="@+id/btn_detail_florist2"
        />

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/bunga3"
        android:id="@+id/bunga3"
        android:layout_below="@+id/btn_detail_florist2"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_paket_3"
        android:layout_below="@+id/bunga3"
        android:text="@string/paket3"
        android:textAlignment="center"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_below="@+id/tv_paket_3"
        android:text="@string/detail_florist"
        android:id="@+id/btn_detail_florist3"
        />

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/bunga4"
        android:id="@+id/bunga4"
        android:layout_below="@+id/btn_detail_florist3"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_paket_4"
        android:layout_below="@+id/bunga4"
        android:text="@string/paket4"
        android:textAlignment="center"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_below="@+id/tv_paket_4"
        android:text="@string/detail_florist"
        android:id="@+id/btn_detail_florist4"
        />

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/bunga5"
        android:id="@+id/bunga5"
        android:layout_below="@+id/btn_detail_florist4"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_paket_5"
        android:layout_below="@+id/bunga5"
        android:text="@string/paket5"
        android:textAlignment="center"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_below="@+id/tv_paket_5"
        android:text="@string/detail_florist"
        android:id="@+id/btn_detail_florist5"
        />


</RelativeLayout>